# arb-hunter-rs

./: Cargo.toml  README.md  config.all-exchanges.example.yaml  config.min.yaml  config.yaml
.github/workflows/: ci.yml
src/: aggregator.rs  api.rs  config.rs  event_bus.rs  main.rs  metrics.rs  redis_sink.rs  router.rs  runtime.rs  source.rs  types.rs
src/exchanges/: binance.rs  binance_perp.rs  bitfinex.rs  bitfinex_perp.rs  bitget.rs  bitget_perp.rs  bybit.rs  bybit_perp.rs  coinbase.rs  common.rs  gate.rs  gate_perp.rs  htx.rs  htx_perp.rs  kraken.rs  kraken_perp.rs  kucoin.rs  kucoin_perp.rs  mod.rs  okx.rs  okx_perp.rs  registry.rs
